<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1FX</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string> 
    <string name="hintUsername">Username</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="registration">REGISTRATION</string>
    <string name="yourEmail">Your Email</string>
    <string name="chosenPassword">Chosen password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="backtologin">Already a member? Signin now</string>
    <string name="registerNow">Register now to access the app</string>
    <string name="hintPassword">Password</string>
    <string name="textWelcome">Welcome to the passcode page</string>
    <string name="logo">image logo</string>
    <string name="billion">BILLION</string>
    <string name="netprof">NET PROFIT</string>
    <string name="thousand">THOUSAND</string>
    <string name="expenses">EXPENSES</string>
    <string name="walletSummary">WALLET SUMMARY</string>
    <string name="currentBalance">CURRENT BALANCE</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >DASHBOARD</item>
        <item >ACCOUNT DETAILS</item>
        <item >CARDS</item>
        <item >PURCHASE CURRENCY</item>
        <item>TRANSFER / REQUEST</item>
        <item >TRANSACTION HISTORY</item>
        <item >CONVERSATION</item>
        <item >1FX SETTING</item>
        <item >LOCK WALLET</item>
        <item >LOGOUT</item>
        <item >PEOPLE AND PLACES</item>
        <item >ADD CONTACT</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_dashboard</item>
        <item>@drawable/ic_account</item>
        <item>@drawable/ic_card</item>
        <item>@drawable/ic_currency</item>
        <item>@drawable/ic_request</item>
        <item>@drawable/ic_transaction</item>
        <item>@drawable/ic_msg</item>
        <item>@drawable/ic_setting</item>
        <item>@drawable/ic_lock</item>
        <item>@drawable/ic_logout</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_add</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
