<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:windowActionBar="false"
    android:layout_height="match_parent"
    android:background="#fff"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:paddingTop="25dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:contentDescription="@string/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:background="#ececec"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/login"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#999999"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#fff"
                    android:orientation="vertical"
                    android:paddingBottom="25dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="25dp" >

                    <EditText
                        android:id="@+id/loginuser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ececec"
                        android:ems="10"
                        android:hint="@string/hintUsername"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:textColor="#a3a3a3"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/loginpass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="#ececec"
                        android:ems="10"
                        android:hint="@string/hintPassword"
                        android:paddingBottom="10dp"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:textColor="#a3a3a3"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="#383838"
                        android:paddingBottom="8dp"
                        android:paddingTop="8dp"
                        android:text="@string/login"
                        android:textColor="#fff"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/registerNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:layout_marginTop="20sp"
                    android:gravity="center"
                    android:text="@string/registerNow"
                    android:textColor="#6b6b6b"
                    android:textSize="12sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
